# OpenGLTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenGLTest.sln  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  main.cpp  shader.cpp  shader.hpp
Shaders/: fragmentShader.glsl  vertexShader.glsl
shaders/: lightCubeShader.frag  lighting.frag  lighting.vert
src/: camera.cpp  camera.hpp  main.cpp  shader.cpp  shader.hpp
